--- a/index.html
+++ b/index.html
@@ -48,28 +48,31 @@
     </ul>
 
     <h2 id="modeling">Modeling</h2>
-    <p>A multilabel classification model was trained using the dataset to predict the three most likely barriers to healthcare patients and another was trained to predict the three most likely action needed to be taken. The model was set up using <strong>Python</strong> and the <strong>Keras API</strong>. The multilabel models used were neural networks consisting of Convolutional layers, MaxPooling layers, Dense layers, and Dropout layers. The multiclass classification of visit intensity was done with a Support Vector Machine algorithm, specifically the LinearSVC function. Average performance metrics (accuracy, precision, recall, and F1 scores) were calculated over the course of a K-fold cross validation. These average metrics were determined for individual barrier and action classes as well as for all classes as a whole.</p>
+    <p>A multilabel classification model was trained using the dataset to predict the three most likely barriers to healthcare patients and another was trained to predict the three most likely action needed to be taken. 
+      The model was set up using <strong>Python</strong> and the <strong>Keras API</strong>. The multilabel models used were neural networks consisting of Convolutional layers, MaxPooling layers, Dense layers, and Dropout layers. 
+      The multiclass classification of visit intensity was done with a Support Vector Machine algorithm, specifically the LinearSVC function. Average performance metrics (accuracy, precision, recall, and F1 scores) were calculated 
+      over the course of a K-fold cross validation. These average metrics were determined for individual barrier and action classes as well as for all classes as a whole.</p>
 
     <h2 id="analysis">Analysis</h2>
 
     <p>Correlational relationships between features and the barriers reported by patients suggest primary languages.</p>
 
-    <h4 id="multilabal-classification">Multilabal Classification</h4>
+    <h4 id="multilabal-classification">Multilabel Classification</h4>
     <hr />
-    <p><img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.png" alt="Kitten" title="A cute kitten" width="150" height="100" /></p>
+    <p><img src="/barrier_predictions.png" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
 
     <hr />
     <div class="slideshow-container">
 
     <div class="mySlides fade">
       <div class="numbertext">1 / 2</div>
-      <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.png" style="width:100%" />
+      <img src="/barrier_predictions.png" style="width:100%" />
       <div class="text">Barrier Predictions</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 2</div>
-      <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/action_predictions.png" style="width:100%" />
+      <img src="/action_predictions.png" style="width:100%" />
       <div class="text">Action Predictions</div>
     </div>
 
