--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 2</div>
-      <img src="/action_predictions.png" style="width:100%" />
+      <img src="https://github.com/RufinoSalgado21/HealthBarriers/action_predictions.png" style="width:100%" />
       <div class="text">Action Predictions</div>
     </div>
 
