--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div class="mySlides fade">
       <div class="numbertext">1 / 2</div>
-      <img src="/barrier_predictions.png" style="width:100%" />
+      <img src="https://github.com/RufinoSalgado21/HealthBarriers/barrier_predictions.png" style="width:100%" />
       <div class="text">Barrier Predictions</div>
     </div>
 
