--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <h4 id="multilabal-classification">Multilabel Classification</h4>
     <hr />
-    <p><img src="/barrier_predictions.png" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
+    <p><img src="https://github.com/RufinoSalgado21/HealthBarriers/barrier_predictions.png" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
 
     <hr />
     <div class="slideshow-container">
