--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   </section>
 
   <section class="main-content">
-    <link rel="stylesheet" href="index.css" />
 
     <script type="text/javascript" src="index.js"></script>
 
@@ -59,20 +58,20 @@
 
     <h4 id="multilabal-classification">Multilabel Classification</h4>
     <hr />
-    <p><img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.png" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
+    <p><img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.PNG" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
 
     <hr />
     <div class="slideshow-container">
 
     <div class="mySlides fade">
       <div class="numbertext">1 / 2</div>
-      <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.png" style="width:100%" />
+      <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.PNG" style="width:100%" />
       <div class="text">Barrier Predictions</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 2</div>
-      <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/action_predictions.png" style="width:100%" />
+      <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/action_predictions.PNG" style="width:100%" />
       <div class="text">Action Predictions</div>
     </div>
 
