--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HealthBarriers</title>
-    <link rel="stylesheet" href="/HealthBarriers/index.css">
+    
   </head>
 <body>
   <section class="page-header">
@@ -14,8 +14,6 @@
   </section>
 
   <section class="main-content">
-
-    <script type="text/javascript" src="index.js"></script>
 
     <h1 id="multilabel-and-multiclass-analysis-of-social-determinants-of-health">Multilabel and Multiclass Analysis of Social Determinants of Health</h1>
     <h2 id="project-overview">Project Overview</h2>
@@ -58,7 +56,7 @@
 
     <h4 id="multilabal-classification">Multilabel Classification</h4>
     <hr />
-    <p><img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.PNG" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
+    <p><img src="barrier_predictions.PNG" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
 
     <hr />
     <div class="slideshow-container">
