--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
       <a href="https://github.com/RufinoSalgado21/HealthBarriers" class="btn">View on GitHub</a>
   </section>
+    <p><img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.PNG" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
 
   <section class="main-content">
+    <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.PNG" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" >
 
     <h1 id="multilabel-and-multiclass-analysis-of-social-determinants-of-health">Multilabel and Multiclass Analysis of Social Determinants of Health</h1>
     <h2 id="project-overview">Project Overview</h2>
@@ -56,7 +58,7 @@
 
     <h4 id="multilabal-classification">Multilabel Classification</h4>
     <hr />
-    <p><img src="barrier_predictions.PNG" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
+    <p><img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.PNG" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
 
     <hr />
     <div class="slideshow-container">
