--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <a href="https://github.com/RufinoSalgado21/HealthBarriers" class="btn">View on GitHub</a>
   </section>
-    <p><img src="![barrier_predictions](https://user-images.githubusercontent.com/32345481/103259736-3e8c4400-4960-11eb-839e-eba9e98de1a5.png)" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
+    <p><img src="https://user-images.githubusercontent.com/32345481/103259736-3e8c4400-4960-11eb-839e-eba9e98de1a5.png" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
 
   <section class="main-content">
     <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.PNG" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" >
