--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>HealthBarriers</title>
     
   </head>
+  <link rel="stylesheet" href="index.css" />
+  <script type="text/javascript" src="index.js"></script>
 <body>
   <section class="page-header">
     <h1 class="project-name">HealthBarriers</h1>
@@ -58,20 +60,20 @@
 
     <h4 id="multilabal-classification">Multilabel Classification</h4>
     <hr />
-    <p><img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.PNG" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
+    <p><img src="https://user-images.githubusercontent.com/32345481/103259736-3e8c4400-4960-11eb-839e-eba9e98de1a5.png" alt="barrier predictions" title="Barrier Predictions" width="150" height="100" /></p>
 
     <hr />
     <div class="slideshow-container">
 
     <div class="mySlides fade">
       <div class="numbertext">1 / 2</div>
-      <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/barrier_predictions.PNG" style="width:100%" />
+      <img src="https://user-images.githubusercontent.com/32345481/103259736-3e8c4400-4960-11eb-839e-eba9e98de1a5.png" style="width:100%" />
       <div class="text">Barrier Predictions</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 2</div>
-      <img src="https://github.com/RufinoSalgado21/HealthBarriers/blob/master/action_predictions.PNG" style="width:100%" />
+      <img src="https://user-images.githubusercontent.com/32345481/103260024-90819980-4961-11eb-9440-a7b9cba2496b.png" style="width:100%" />
       <div class="text">Action Predictions</div>
     </div>
 
