--- a/index.html
+++ b/index.html
@@ -70,12 +70,14 @@
 
             <img id="actions-correlations" src="https://user-images.githubusercontent.com/32345481/103325031-769e9000-4a0f-11eb-9cf9-718ca019bd6f.png" />
             <div class="numbertext"><h4>Notable Correlations Between Features and Actions</h4></div>
+            <p>In development...</p>
         </div>
 
         <div class="mySlides fade">
 
             <img id="feature-correlations" src="https://user-images.githubusercontent.com/32345481/103324998-57076780-4a0f-11eb-935f-32da322b3750.png" />
             <div class="numbertext"><h4>Notable Correlations Between Features</h4></div>
+            <p>In development...</p>
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -93,12 +95,14 @@
 
             <img id="barrierpred" src="https://user-images.githubusercontent.com/32345481/103307670-45559e00-49d6-11eb-987f-8aa24266ad5a.png"/>
             <div class="numbertext"><h4>Barrier Predictions</h4></div>
+            <p>In development...</p>
         </div>
 
         <div class="mySlidesB fade">
 
             <img id="actionpred" src="https://user-images.githubusercontent.com/32345481/103306596-88fad880-49d3-11eb-984b-6d4a7557e4ae.png" />
             <div class="numbertext"><h4>Actions Taken Predictions</h4></div>
+            <p>In development...</p>
         </div>
 
         <a class="prev" onclick="plusSlidesB(-1)">&#10094;</a>
